--- a/styles/index.css
+++ b/styles/index.css
@@ -1,21 +1,18 @@
-.flex-container {
-  /* We first create a flex layout context */
+body {
+  background-color: thistle;
+}
+.container {
   display: flex;
-  
-  /* Then we define the flow direction 
-     and if we allow the items to wrap 
-   * Remember this is the same as:
-   * flex-direction: row;
-   * flex-wrap: wrap;
-   */
-  flex-flow: row wrap;
-  
-  /* Then we define how is distributed the remaining space */
-  justify-content: space-around;
-  
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  padding: 0px;
+  margin: 0px;
+  gap: 5px;
+  row-gap: 10px;
+  column-gap: 10px;
+  flex-wrap: wrap;
+
 }
 
 .frame-one {
@@ -118,7 +115,7 @@
   height: 110px;
   border-radius: 15px;
   margin: 20px;
-  color: white;
+  color: rgba(17, 10, 10, 0.644);
   text-align: center;
 }
 .bxfve-second {
