--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
 body {
-  background-color: thistle;
+  background-color: rgba(97, 170, 238, 0.432);
 }
 .container {
+  background-color: silver;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: center;
-  padding: 0px;
-  margin: 0px;
+  padding: 20px;
+  margin: 20px;
   gap: 5px;
   row-gap: 10px;
   column-gap: 10px;
@@ -18,7 +19,7 @@ body {
 .frame-one {
   display: flex;
   flex-direction: ;
-  background-color: tomato;
+  background-color: rgba(39, 133, 36, 0.356);
   padding: 5px;
   width: 468px;
   height: 160px;
@@ -118,7 +119,7 @@ body {
   color: rgba(17, 10, 10, 0.644);
   text-align: center;
 }
-.bxfve-second {
+.five-second {
   height: 55px;
   background-color: violet;
 }
@@ -143,4 +144,148 @@ body {
 }
 .six-middle {
   flex-grow: 2;
+}
+.second-container {
+  background-color: yellowgreen;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    width: 900px;
+    height: 600px;
+    padding: 10px;
+    margin: 10px;
+    margin-top 20px;
+    gap: 5px;
+    row-gap: 10px;
+    column-gap: 10px;
+    flex-wrap: wrap;
+    border-radius: 30px;
+  
+  }
+  .dice-one {
+    display: flex;
+    flex-direction: ;
+    background-color: rgba(23, 99, 21, 0.87);
+    padding: 5px;
+    width: 250px;
+    height: 160px;
+    justify-content: flex-start;
+  }
+  .dot-one {
+    display: flex;
+    background-color: rgba(207, 207, 47, 0.774);
+    padding: 5px;
+    width: 30px;
+    height: 20px;
+    border-radius: 15px;
+    border-radius: 50%;
+    margin: 10px
+  }
+ .second-row {
+   background-color: royalblue;
+   justify-self: flex-start;
+   align-self: center;
+   
+ }
+  .dice-two {
+    display: flex;
+    flex-direction: ;
+    background-color: rgb(44, 39, 39);
+    padding: 5px;
+    width: 250px;
+    height: 160px;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .dot-two {
+    display: flex;
+    background-color: yellow;
+    padding: 5px;
+    width: 30px;
+    height: 20px;
+    border-radius: 15px;
+    border-radius: 50%;
+    margin: 10px
+  }
+  .top-two {
+    justify-self: flex-end;
+
+  }
+  .bottom-two {
+    justify-self: flex-end;
+    align-self: flex-end;
+  }
+  .dice-three {
+    display: flex;
+    flex-direction: ;
+    background-color: rgb(219, 36, 36);
+    padding: 5px;
+    width: 250px;
+    height: 160px;
+    justify-content: flex-start;
+    align-items: ;
+  }
+  .dot-three {
+    display: flex;
+    justify-content: first baseline;
+    align-content: flex-start;
+    background-color: yellow;
+    padding: 5px;
+    width: 30px;
+    height: 10px;
+    border-radius: 15px;
+    border-radius: 50%;
+    margin: 10px
+  }
+  .bottom-three {
+    align-self: flex-end;
+  }
+  .dice-four {
+    display: flex;
+    flex-direction: ;
+    background-color: rgb(65, 54, 54);
+    padding: 5px;
+    width: 250px;
+    height: 160px;
+    justify-content: space-between;
+    align-self:  flex-end;
+    
+  }
+  .dot-four {
+    display: flex;
+    background-color: yellow;
+    padding: 5px;
+    width: 30px;
+    height: 10px;
+    border-radius: 15px;
+    border-radius: 50%;
+    margin: 10px
+  }
+  .bottom-four {
+    align-self: flex-end;
+  }
+  .dice-five {
+    display: flex;
+    flex-direction: ;
+    background-color: rgba(92, 73, 73, 0.199);
+    padding: 5px;
+    width: 250px;
+    height: 160px;
+  }
+  .dot-five {
+    display: flex;
+    background-color: rgba(32, 32, 20, 0.767);
+    padding: 5px;
+    width: 30px;
+    height: 10px;
+    border-radius: 15px;
+    margin: 10px;
+    color: rgba(17, 10, 10, 0.644);
+    border-radius: 50%;
+    
+}
+.bottom-five {
+  align-self: flex-end;
+  justify-self: center;
 }
